# litellm-ainative

./: CLAUDE.md  README.md  pyproject.toml
litellm_ainative/: __init__.py  provider.py
litellm_ainative.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_provider.py
