[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litellm-ainative"
version = "0.1.0"
description = "AINative provider for litellm — free Llama, Qwen, DeepSeek & Kimi models via one call."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "AINative Studio", email = "dev@ainative.studio"},
]
keywords = [
    "litellm",
    "litellm-provider",
    "litellm-plugin",
    "openai-compatible",
    "free-llm",
    "llama",
    "llama-3",
    "qwen",
    "qwen-coder",
    "deepseek",
    "deepseek-coder",
    "kimi",
    "kimi-k2",
    "ainative",
    "zerodb",
    "auto-provisioning",
    "chat-completion",
    "tool-calling",
    "embeddings",
    "claude",
    "cursor",
    "free-api",
    "inference",
    "ai-gateway",
    "model-router",
    "openai-proxy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "litellm>=1.0",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/AINative-Studio/litellm-ainative"
Documentation = "https://docs.ainative.studio"
Repository = "https://github.com/AINative-Studio/litellm-ainative"
Issues = "https://github.com/AINative-Studio/litellm-ainative/issues"

[tool.setuptools.packages.find]
include = ["litellm_ainative*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
